margin/spacing fixes

--- a/_sass/layouts/_index.scss
+++ b/_sass/layouts/_index.scss
@@ -8,6 +8,8 @@
   text-align: center;
   color: $text-color;
   background-position:center center;
+  margin-bottom: 0;
+  padding-bottom: 0;
   .site-title {
     display:block;
     width:100%;
@@ -74,6 +76,8 @@
   @extend %padding-regular;
   background-size: $feature-image-size;
   text-align: center;
+  margin-top: 0;
+  padding-top: 0;
   display: block;
   float: left;
   width: 100%;
